# mutagui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  go.mod  go.sum  justfile  main.go
internal/app/: app.go  app_test.go
internal/config/: config.go  config_test.go
internal/mutagen/: client.go  client_test.go  json_test.go  types.go  types_test.go
internal/project/: project.go  project_test.go
internal/ui/: conflicts.go  model.go  selection.go  selection_test.go  theme.go  view.go
src/: app.rs  command.rs  config.rs  endpoint.rs  keys.rs  main.rs  mutagen.rs  project.rs  selection.rs  theme.rs  ui.rs  widgets.rs
