[package]
name = "mutagui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
chrono = "0.4"
terminal-light = "1.4"
glob = "0.3"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2.177"
