[package]
name = "mutagui"
version = "0.1.1"
edition = "2021"
authors = ["Oliver Steele <steele@osteele.com>"]
description = "A terminal user interface for managing Mutagen sync sessions"
readme = "README.md"
homepage = "https://github.com/osteele/mutagui"
repository = "https://github.com/osteele/mutagui"
license = "MIT"
keywords = ["mutagen", "tui", "sync", "terminal", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
chrono = "0.4"
terminal-light = "1.4"
glob = "0.3"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2.177"
textwrap = "0.16"
toml = "0.9.8"
dirs = "6.0.0"
